--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -21,3 +21,4 @@ a,ins,s,u,del{text-decoration:none}
 sup,sub{vertical-align:baseline}
 html {-webkit-tap-highlight-color: transparent;background: #fff}
 a {text-decoration: none;}
+html, body {height: 100%;}
