--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -179,7 +179,7 @@ html,
 body {
   margin: 0;
   height: 100%;
-  overflow: hidden;
+  width: 100%;
 }
 body {
   font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
