--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -26,3 +26,58 @@ html, body {margin:0; height:100%; width: 100%;}
 body{
     font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;;
 }
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid rgba(183, 183, 183, .3);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background: #2d527d;
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, .8), 0 0 6px rgba(255, 255, 255, .8);
+    position: relative;
+  }
+  
+  ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
+  
+  ::-webkit-scrollbar-button:vertical:start {
+    width: 0;
+    height: 0;
+    background: #2d527d;
+  }
+  
+  ::-webkit-scrollbar-button:vertical:end {
+    width: 0;
+    height: 0;
+    background: #2d527d;
+  }
+  
+  ::-webkit-scrollbar:horizontal {
+    width: 80%;
+    height: 10px;
+    background-color: transparent;
+    border: 1px solid #b7b7b7;
+  }
+  
+  ::-webkit-scrollbar-thumb:horizontal {
+    background: #2d527d;
+  }
+  
+  ::-webkit-scrollbar-button:horizontal:start {
+    background: #2d527d;
+  }
+  
+  ::-webkit-scrollbar-button:horizontal:end {
+    background: #2d527d;
+  }
+  
+  ::-webkit-scrollbar-corner {
+    background: #2d527d;
+  }
