--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -21,7 +21,7 @@ a,ins,s,u,del{text-decoration:none}
 sup,sub{vertical-align:baseline}
 html {-webkit-tap-highlight-color: transparent;background: #fff}
 a {text-decoration: none;}
-html, body {margin:0; height:100%; width: 100%;}
+html, body {margin:0; height:100%; width: 100%; min-height: 969px;}
 
 body{
     font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;;
