--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -180,6 +180,7 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
+  min-height: 969px;
 }
 body {
   font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
